src/main/java/com/example/connection/error/Exception/UserNotFoudExceptionHandler.java
package com.example.connection.error.Exception;

public class UserNotFoudExceptionHandler extends RuntimeException{
    
    public UserNotFoudExceptionHandler(String massage){
        super(massage);
    }
}
